Fix text align on iPad Pro

--- a/front/sass/_languages.scss
+++ b/front/sass/_languages.scss
@@ -18,6 +18,9 @@
     @media print {
       margin: auto 0 0;
     }
+    @include media-breakpoint-only(lg) {
+      text-align: center;
+    }
   }
 
   & h5 {
